# HookNt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  test.cpp
cmake/: distorm.cmake
hookNt/: hookNt.sln
hookNt/hookNt/: hookNt.cpp  hookNt.vcxproj
ntdllN/: ntdllN.sln
ntdllN/ntdllN/: cpp.hint  ntdllN.cpp  ntdllN.h  ntdllN.vcxproj  ntdllN.vcxproj.filters  syscall.asm
src/hookNt/hookNt/: hookNt.cpp  hookNt.vcxproj.filters
src/hooknt/: CMakeLists.txt  hook_manager.cpp  main.cpp  memory_utils.cpp  process_manager.cpp
src/include/: common.h  function_resolver.h  hook_manager.h  logger.h  memory_utils.h  module_resolver.h  ntdlln.h  process_manager.h
src/ntdllN/ntdllN/: ntdllN.cpp  ntdllN.vcxproj
src/ntdlln/: CMakeLists.txt  dllmain.cpp  function_resolver.cpp  logger.cpp  module_resolver.cpp  ntdlln.cpp
tests/: CMakeLists.txt  build.bat  test_file_ops.cpp
tests/test1/: test1.sln
tests/test1/test1/: Source.cpp  test1.vcxproj
